# BottyCall

./: Cargo.toml  Makefile  README.md  com.bottycall.daemon.plist.in  hooks.json  install-hooks.prompt.md
BottyCallUI/: .gitignore  Package.swift
BottyCallUI/Sources/: AppDelegate.swift  Models.swift  SectionHeaderView.swift  SessionConnection.swift  SessionRowView.swift  SessionStore.swift  SidebarView.swift
src/: main.rs  protocol.rs  report.rs  session.rs
src/daemon/: listener.rs  mod.rs  poller.rs  state.rs
src/tui/: app.rs  mod.rs  ui.rs
